--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   -webkit-touch-callout: none;
 
   /* IOS notch */
-  min-height: calc(100% + env(safe-area-inset-top));
+  min-height: calc(100% + env(safe-area-inset-top) + 1em);
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
